--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.11.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
